--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "axios": "^0.27.2",
+    "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "moment": "^2.29.3",
     "print-js": "^1.6.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-chartjs": "^4.1.1",
     "vue-material-design-icons": "^5.0.0",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
