--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "print-js": "^1.6.0",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
+    "vue-browser-geolocation": "^1.8.0",
     "vue-chartjs": "^4.1.1",
+    "vue-geolocation-api": "^0.1.21",
     "vue-material-design-icons": "^5.0.0",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
+    "vue3-geolocation": "^1.0.0",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
