--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vue-browser-geolocation": "^1.8.0",
     "vue-chartjs": "^4.1.1",
     "vue-geolocation-api": "^0.1.21",
+    "vue-html-to-paper": "^1.4.4",
     "vue-material-design-icons": "^5.0.0",
     "vue-router": "^4.0.3",
     "vue-sweetalert2": "^5.0.5",
